# judesa-tmp

./: docker-compose.yaml  package-lock.json  pyproject.toml  requirements.txt
apps/docker/nginx/: nginx.conf
apps/docker/web/: Dockerfile
apps/docker/www/: Dockerfile
apps/web/: .env  db.sqlite3  docker-compose.yaml  package-lock.json  requirements.txt
apps/web/backend/: settings.py  urls.py
apps/web/judesaBackend/: admin.py  apps.py  models.py  urls.py  views.py
apps/web/judesaBackend/migrations/: 0001_initial.py  0002_alter_news_id_alter_products_id_alter_tags_id.py  0003_alter_news_preview_image_alter_tags_news_id.py  0004_remove_tags_html_tags_alt_tags_class_style_and_more.py  0005_alter_tags_alt_alter_tags_class_style_and_more.py  0006_alter_tags_alt_alter_tags_class_style_and_more.py  0007_staff_remove_news_date_categories_is_active_and_more.py  0008_news_tags_delete_tags.py  0009_remove_sponsors_web_url_sponsors_social_and_more.py  0010_alter_players_category_id_matches.py  0011_remove_matches_judesa_score_and_more.py  0012_matches_location_alter_matches_rival_and_more.py  0013_rename_has_ended_matches_show_result.py  0014_alter_staff_is_active.py  0015_staff_image.py  0016_alter_staff_image.py  0017_alter_staff_image.py  0018_remove_staff_image.py  0019_staff_image.py  0020_alter_categories_trainer.py  0022_categories_image.py  (+1 more)
apps/web/scripts/: collectstatic.sh  createsuperuser.sh  entrypoint.sh
apps/www/: next.config.mjs  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.json
apps/www/constants/: index.js
(+3 files in other folders)
